updated markup, styles, README.md

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>CSS Toggle Switch</title>
 </head>
 <body>
-    
-
-    <script src="./scripts/app.js"></script>
+    <div class="container">
+        <input type="checkbox">
+    </div>
 </body>
 </html>
